<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_MotorControlData" Id="{97aa68f7-388b-4775-911a-94d665cb97ba}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'}
TYPE ST_MotorControlData EXTENDS ST_SupervisorHeader: 
STRUCT
	MessageNo			: UDINT;
	fW0AngleOfRef		: REAL := 16#7FA00000;
	fW0SpeedOfRef		: REAL := 16#7FA00000;
	fW1AngleOfRef		: REAL := 16#7FA00000;
	fW1SpeedOfRef		: REAL := 16#7FA00000;
	fDrivingVectorAngle	: REAL;
	fSteeringRadius		: REAL;
	fDrivingSpeed		: REAL;
	fDiffLWWheelSpeed	: REAL;
	fDiffRWWheelSpeed	: REAL;
	nTimeStamp			: UDINT;
	nStatus				: UINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>