<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_SupervisorHeader" Id="{77264308-66a8-4f31-8b94-b1e1812d84ee}">
    <Declaration><![CDATA[TYPE ST_SupervisorHeader :
STRUCT
	nPVersion	: UINT := 4;	
	nMessageID	: UINT ;
	nMessageLength : UDINT;	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>