<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_SupervisorStatus" Id="{3090faa8-635a-4a50-9311-ab3b14051e15}">
    <Declaration><![CDATA[TYPE ST_SupervisorStatus EXTENDS ST_SupervisorHeader:
STRUCT
	nStatus : UINT;
	nESTOP	: UINT;
	nSections	: UINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>