<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_MessageIds" Id="{51b42edf-3827-46b9-97ba-1abfa705b8c1}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_MessageIds :
(
	MEASUREMENT_UPDATE_COMBINED := 1023,
	MOTOR_CONTROL_COMBINED := 1123
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>