<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_AGVSupervisor" Id="{858de0f6-8855-47a8-ad1c-721e8e579bde}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_AGVSupervisor
VAR_INPUT
		sRemoteHost	: T_IPv4Addr ;
		nRemotePort	: UDINT;
END_VAR
VAR_OUTPUT
	bCommErr	: BOOL;
	nErrId		: UDINT;
END_VAR
VAR

	fbMeasurementUpdate		: FB_TcpIpComms;
	fbStatusUpdate			: FB_TcpIpComms;
	
	stMeasurementData		: ST_MeasurementData; //Data structure for 1023 Measurement Update Combined message
	stStatusData			: ST_SupervisorStatus;
	sMeasurementData		: STRING;
	sStatusData				: STRING;
	
	//variables for data received
	stMotorData				: ST_MotorControlData; //Data structure for 1223 Motor Update  message
	sRecMotorData			: STRING(255);
	sRecStatusData			: STRING(200);
	
	//control Variables
	bCommsOpen				: BOOL;
	bSendMessage			: BOOL;
	bConnect				: BOOL;
	bInit					: BOOL := TRUE;
	bReceived				: BOOL;
	
	nCount					: UINT;
	fbTimer					: TON;
	nTime: UINT;
	tCyclicTime				: TIME := T#10MS;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF bInit THEN
	InitTcpIp();
	bInit := FALSE;
END_IF
MeasurementUpdate();

IF bCommsOpen THEN
	fbTimer(IN:= NOT fbTimer.Q, PT:= tCyclicTime , Q=> , ET=> );
	IF fbTimer.Q THEN
		nCount := nCount + 1;
	END_IF
END_IF
]]></ST>
    </Implementation>
    <Method Name="FB_init" Id="{e917bcc4-e4a7-47c9-9e07-085938821849}">
      <Declaration><![CDATA[METHOD FB_init : BOOL
VAR_INPUT
	bInitRetains : BOOL; // if TRUE, the retain variables are initialized (warm start / cold start)
	bInCopyCode : BOOL;  // if TRUE, the instance afterwards gets moved into the copy code (online change)
	sIPAddr	: T_IPv4Addr := '192.168.0.18';
	nPort	: UDINT := 2000;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.sRemoteHost := sIPAddr;
THIS^.nRemotePort := nPort;]]></ST>
      </Implementation>
    </Method>
    <Method Name="InitTcpIP" Id="{e1f566a6-d38a-4fbd-a14a-d3002d7e4034}">
      <Declaration><![CDATA[METHOD InitTcpIP : BOOL
VAR_INPUT

END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[fbMeasurementUpdate.RemoteHost := sRemotehost;
fbMeasurementUpdate.RemotePort := nRemotePort;
fbStatusUpdate.RemoteHost	:= sRemoteHost;
fbStatusUpdate.RemotePort	:= nRemotePort;

stMeasurementData.nMessageID := INT_TO_UINT(E_MessageIds.MEASUREMENT_UPDATE_COMBINED);
stMeasurementData.nMessageLength := 44;
stMeasurementData.AGVDriveMode := 1;
stMeasurementData.DiffLWWheelSpeed := 1;
stMeasurementData.DiffRWWheelSpeed := 1;

TcpIpCommVars.MessageNo := 0;
]]></ST>
      </Implementation>
    </Method>
    <Method Name="MeasurementUpdate" Id="{10146606-f4ba-4177-85f6-3ab52cae5bdc}">
      <Declaration><![CDATA[METHOD PRIVATE MeasurementUpdate : BOOL
VAR_INPUT
END_VAR

VAR

END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF bCommsOpen THEN
	IF fbMeasurementUpdate.bReadyMessage THEN
		stMeasurementData.nMessageNO := TcpIpCommVars.MessageNo;
		stMeasurementData.Timestamp := ULINT_TO_UDINT(F_GetSYSTEMTIME());
		bSendMessage := TRUE;	
	END_IF
	stMeasurementData.PLCStatus.6 := 1;
	MEMCPY(ADR(sMeasurementData),ADR(stMeasurementData),SIZEOF(stMeasurementData));
	IF fbMeasurementUpdate.tCycleTime <> T#0MS THEN
		bSendMessage := FALSE;
	END_IF
	ELSE		
	bSendMessage := FALSE;
END_IF

fbMeasurementUpdate(
	bStartComms:= bConnect, 
	sSendData:= sMeasurementData, 
	bSend:= bSendMessage, 
	sReceivedData=> sRecMotorData,
	tCycleTime := tCyclicTime, 
	bError=> bCommErr, 
	bBusy=> , 
	nErrId=> nErrId, 
	bConnected=> bCommsOpen);
IF bCommErr THEN 
bConnect := FALSE;
END_IF	

IF NOT bCommErr AND fbMeasurementUpdate.nRecBytes <> 0 THEN
	MEMCPY(ADR(stMotorData),ADR(sRecMotorData),SIZEOF(stMotorData));
	TcpIpCommVars.MessageNo := TcpIpCommVars.MessageNo +1;
	sRecMotorData := '';
	nTime := (nCount * 30);
	nCount := 0;

END_IF


]]></ST>
      </Implementation>
    </Method>
    <Method Name="StatusUpdate" Id="{1aad1ebb-959d-4e3b-943d-11735de4e7cb}">
      <Declaration><![CDATA[METHOD PRIVATE StatusUpdate : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[fbStatusUpdate(
	bStartComms:= bCommsOpen, 
	sSendData:= sStatusData, 
	bSend:= bSendMessage, 
	tCycleTime:= T#100MS, 
	sReceivedData=> , 
	bError=> , 
	bBusy=> , 
	nErrId=> , 
	bConnected=> , 
	bReadyMessage=> , 
	nRecBytes=> );]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_AGVSupervisor">
      <LineId Id="29" Count="1" />
      <LineId Id="35" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="90" Count="0" />
      <LineId Id="44" Count="0" />
      <LineId Id="46" Count="0" />
      <LineId Id="88" Count="1" />
      <LineId Id="87" Count="0" />
      <LineId Id="83" Count="0" />
      <LineId Id="85" Count="0" />
    </LineIds>
    <LineIds Name="FB_AGVSupervisor.FB_init">
      <LineId Id="7" Count="0" />
      <LineId Id="10" Count="0" />
    </LineIds>
    <LineIds Name="FB_AGVSupervisor.InitTcpIP">
      <LineId Id="5" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="23" Count="1" />
      <LineId Id="9" Count="0" />
      <LineId Id="11" Count="3" />
      <LineId Id="18" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="16" Count="0" />
    </LineIds>
    <LineIds Name="FB_AGVSupervisor.MeasurementUpdate">
      <LineId Id="15" Count="0" />
      <LineId Id="55" Count="0" />
      <LineId Id="27" Count="1" />
      <LineId Id="59" Count="0" />
      <LineId Id="21" Count="1" />
      <LineId Id="14" Count="0" />
      <LineId Id="57" Count="0" />
      <LineId Id="56" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="16" Count="1" />
      <LineId Id="6" Count="4" />
      <LineId Id="19" Count="0" />
      <LineId Id="11" Count="2" />
      <LineId Id="5" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="48" Count="0" />
      <LineId Id="47" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="60" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="54" Count="0" />
      <LineId Id="49" Count="1" />
      <LineId Id="37" Count="0" />
      <LineId Id="46" Count="0" />
      <LineId Id="40" Count="1" />
    </LineIds>
    <LineIds Name="FB_AGVSupervisor.StatusUpdate">
      <LineId Id="8" Count="10" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>